@@ -2,8 +2,8 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming,
         Statistics, and Simulation
-Version: 0.95-26
-Date: 2010-03-11
+Version: 0.95-27
+Date: 2010-03-18
 Author: Martin Elff
 Maintainer: Martin Elff <melff@essex.ac.uk>
 Description: One of the aims of this package is to make life easier for
@@ -20,6 +20,6 @@ License: GPL-2
 LazyLoad: Yes
 Depends: lattice, grid, stats, methods, utils, MASS
 URL: http://www.martin-elff.net/software/memisc/
-Packaged: 2010-03-11 10:28:33 UTC; elff
+Packaged: 2010-03-18 13:44:54 UTC; elff
 Repository: CRAN
-Date/Publication: 2010-03-11 16:37:39
+Date/Publication: 2010-03-18 14:25:19
